--- a/BlazorApp-Adance-signalR/Pages/Index.razor
+++ b/BlazorApp-Adance-signalR/Pages/Index.razor
@@ -1,6 +1,4 @@
 ﻿@page "/"
-@using BlazorApp_Adance_signalR.Data;
-@using BlazorApp_Adance_signalR.Hubs;
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.AspNetCore.SignalR.Client;
 @using System.Net;
@@ -15,37 +13,36 @@
         <div class="row">
 
             <div class="col-6">
-                @if (selectedUser is not null)
-                {
-                    <h2 class="mb-2"> Send message to <span class="text-primary fw-bolder">@selectedUser?.UserName </span></h2>
+                <h2 class="mb-2"> Send message to <span class="text-primary fw-bolder">@selectedUser?.UserName </span></h2>
 
-                    <EditForm Model="message" OnSubmit="SendMessage">
-                        <input @bind="message"/>
-                        <input type="submit" value="Send"/>
-                    </EditForm>
+                <EditForm Model="message" OnSubmit="SendMessage">
+                    <input @bind="message"/>
+                    <input type="submit" value="Send"/>
+                </EditForm>
 
-                    <ul>
-                        @if (_messages.Any())
+                <hr/>
+                <ul>
+                    @if (_messages.Any())
+                    {
+                        foreach (var message in _messages)
                         {
-                            foreach (var message in _messages)
-                            {
-                                <li>
-                                    @message?.Content <span> @message.SentAt.ToString("g")</span>
-                                </li>
-                            }
-                        }
-                        else
-                        {
-                            <p>No messages</p>
-                        }
-                    </ul>
-                }
-                else
-                {
-                    <h2>Please select user to send message to</h2>
-                }
+                            <li class="alert-info mt-2">
+                                <div class="col-4">
+                                    <h5 class="text-warning fw-bolder mx-2">@message.SenderId</h5>
+                                    <p class="fw-light text-black-50 mx-2">
+                                        @message?.Content
+                                    </p>
 
-
+                                    <h6 class="text-info fw-bold mx-2"> @message.SentAt.ToShortTimeString()</h6>
+                                </div>
+                            </li>
+                        }
+                    }
+                    else
+                    {
+                        <p>No messages</p>
+                    }
+                </ul>
             </div>
             <div class="col-6">
                 @foreach (var user in _users)
@@ -113,7 +110,14 @@
         hubConnection.On<Message>("Notification", (msg) =>
         {
             _messages.Add(msg);
-            _messages = new(_messages);
+            _messages = new(_messages.OrderBy(x => x.SentAt));
+            InvokeAsync(StateHasChanged);
+        });
+
+        hubConnection.On<Message>("ForAll", (msg) =>
+        {
+            _messages.Add(msg);
+            _messages = new(_messages.OrderBy(x => x.SentAt));
             InvokeAsync(StateHasChanged);
         });
 
@@ -151,22 +155,26 @@
     {
         var authenticateState = await authenticationStateTask!;
 
-        if (selectedUser is not null)
+        Message? message = new()
         {
-            Message? message = new()
-            {
-                UserId = selectedUser.Email,
-                Content = this.message,
-                SenderId = authenticateState.User.Identity.Name,
-                SentAt = DateTime.Now,
-                Id = Guid.NewGuid()
-            };
+            UserId = selectedUser?.Email,
+            Content = this.message,
+            SenderId = authenticateState.User.Identity.Name,
+            SentAt = DateTime.Now,
+            Id = Guid.NewGuid()
+        };
 
-
-            await hubConnection?.SendAsync("MessageThem", message);
-            this.message = string.Empty;
-            await InvokeAsync(StateHasChanged);
+        if (selectedUser is null)
+        {
+            await hubConnection?.SendAsync("ToAll", message);
         }
+        else
+        {
+            await hubConnection?.SendAsync("MessageThem", message);
+        }
+
+        this.message = string.Empty;
+        await InvokeAsync(StateHasChanged);
     }
 
 }
