--- a/BlazorApp-Adance-signalR/Pages/Index.razor
+++ b/BlazorApp-Adance-signalR/Pages/Index.razor
@@ -66,7 +66,7 @@
     HubConnection? hubConnection;
 
 
-    string? message = String.Empty;
+    string? message = string.Empty;
     List<IdentityUser> _users = new();
     IdentityUser? selectedUser = default;
     ObservableCollection<Message> _messages = new();
