refactoring and upgrading code

--- a/BlazorApp-Adance-signalR/_Imports.razor
+++ b/BlazorApp-Adance-signalR/_Imports.razor
@@ -9,5 +9,9 @@
 @using Microsoft.JSInterop
 @using BlazorApp_Adance_signalR
 @using BlazorApp_Adance_signalR.Shared
+@using Microsoft.AspNetCore.Identity;
+@using Microsoft.AspNetCore.SignalR.Client;
+@using System.Net;
+@using System.Collections.ObjectModel;
 
 @inject CookieProvider CookieProvider
