--- a/BlazorApp-Adance-signalR/Pages/Index.razor
+++ b/BlazorApp-Adance-signalR/Pages/Index.razor
@@ -20,7 +20,7 @@
             <div class="col-9 border-start --dark-theme" id="chat">
                 <div>
                     <h2 class="mb-2">
-                        <span class="text-success fw-lighter">@selectedUser?.UserName.Split("@")[0].Pascalize() </span>
+                        <span class="text-success fw-lighter">@selectedUser?.UserName.Split("@")[0].Humanize() </span>
                     </h2>
                     <hr/>
                 </div>
